<resources>
    <string name="app_name">Nearby</string>

    <!-- Facebook -->
    <string name="facebook_app_id" translatable="false">730316910463943</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb730316910463943</string>
    <string name="sign_in_facebook">Sign in with Facebook</string>

    <!-- Google -->
    <string name="sign_in_google">Sign in with Google</string>
    <string name="client_server_id" translatable="false">706449986158-p86vohdjrun9un1ai7k2ulq1lvi445nk.apps.googleusercontent.com</string>

    <!-- Login Activity -->
    <string name="sign_in_or_sign_up"><b>Sign Up</b> or <b>Sign In</b> here</string>
    <string name="therms_of_service">By Signing up you accept the <a href="">ToS</a> and <a href="">Condition of usage.</a></string>
    <string name="login_failed">Sign in failed.</string>

    <!-- New spotted Activity -->
    <string name="send">Send</string>
    <string name="new_spotted_hint">What did you spot?</string>
    <string name="new_spotted_not_created">Your spotted could not be created. Please try sending it again.</string>
    <string name="new_spotted_anonymity_dialog_anonymous">Your spotted will now be shared anonymously.</string>
    <string name="new_spotted_anonymity_dialog_public">Your spotted will now be shared publicly.</string>

    <!-- Spotted detail Activity -->
    <string name="anonymous">Anonymous</string>

    <!-- My spotted Activity -->
    <string name="could_not_refresh_feed">Could not refresh feed.</string>

    <!-- Settings Activity -->
    <string name="logout">Logout</string>
    <string name="logout_message">Are you sure you want to sign out?</string>
    <string name="deactivate_account">Deactivate account</string>
    <string name="connect_to_google">Connect to Google</string>
    <string name="connect_to_facebook">Connect to Facebook</string>
    <string name="pref_anonymity_on">All your spotted will be anonymously shared.</string>
    <string name="pref_anonymity_off">All your spotted will be publicly shared.</string>
    <string name="link">Link</string>
    <string name="link_facebook_account">Facebook account</string>
    <string name="link_google_account">Google account</string>
    <string name="link_facebook_account_message">Link your facebook account to your current account.</string>
    <string name="link_google_account_message">Link your Google account to your current account.</string>
    <string name="deactivate">Deactivate</string>
    <string name="deactivate_account_message">Deactivating your account will prevent other user from seeing your spotted. Your spotted won\'t be deleted.</string>
    <string name="link_account_failed">An error occurred. Your account wasn\'t linked.</string>
    <string name="account_dactivation_failed">An error occurred. Your account wasn\'t deactivated.</string>
    <string name="merge_account_failed">An error occurred. Your account wasn\'t merged.</string>

    <!-- Generic error layout -->
    <string name="generic_error_message">We\'re sorry, an error occurred.\nPlease try again later</string>

    <!-- Drawer menu items -->
    <string name="map">Map</string>
    <string name="my_spotted">My spotted</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>

    <!-- Shared prefs -->
    <string name="pref_last_social_login_used" translatable="false">pref_last_social_login_used</string>
    <string name="pref_google_token" translatable="false">pref_google_token</string>
    <string name="pref_facebook_token" translatable="false">pref_facebook_token</string>
    <string name="pref_facebook_user_id" translatable="false">pref_facebook_user_id</string>
    <string name="pref_google_user_id" translatable="false">pref_google_user_id</string>
    <string name="pref_anonymity" translatable="false">pref_anonymity</string>

    <!-- Misc -->
    <string name="nav_drawer_open">Drawer open</string>
    <string name="nav_drawer_close">Drawer closed</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="no_internet_connection">No internet connection</string>

</resources>
