<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="General">

        <SwitchPreference
            android:key="@string/pref_anonymity"
            android:title="@string/anonymous"
            android:defaultValue="true"
            android:summaryOn="@string/pref_anonymity_on"
            android:summaryOff="@string/pref_anonymity_off"
            />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="Social">
        <Preference
            android:key="pref_connect_facebook"
            android:title="@string/connect_to_facebook"
            android:enabled="false"
            />
        <Preference
            android:key="pref_connect_google"
            android:title="@string/connect_to_google"
            android:enabled="false"
            />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="Account">

        <Preference
            android:key="pref_logout"
            android:title="@string/logout" />

        <Preference
            android:key="pref_deactivate_account"
            android:title="@string/deactivate_account"
            android:summary="Your spotteds won't be visible to other users anymore. You may active your account by login in Nearby."
            />
    </PreferenceCategory>

</PreferenceScreen>