<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/group1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/map"
            android:icon="@drawable/ic_map"
            android:title="@string/map" />
        <item
            android:id="@+id/my_spotted"
            android:icon="@drawable/ic_message"
            android:title="@string/my_spotted"
            />
    </group>

    <group
        android:id="@+id/group2"
        android:checkableBehavior="none">
        <item
            android:id="@+id/settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings"
            />
        <item
            android:id="@+id/help"
            android:icon="@drawable/ic_help"
            android:title="@string/help"
            />
    </group>
</menu>