<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    tools:context=".ui.login.LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:background="@color/colorPrimaryDark">

        <RelativeLayout
            android:id="@+id/logo_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="120dp"
                android:layout_height="162dp"
                android:src="@drawable/ic_logo"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true" />
            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/logo"

                android:textSize="30sp"
                android:textColor="#FFF"

                android:text="@string/app_name"
                />

            <TextView
                android:id="@+id/sub_logo1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/title"

                android:layout_marginTop="@dimen/medium"

                android:textColor="@color/white"
                android:textSize="16sp"
                android:text="Discover the world"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/sub_logo1"

                android:textColor="@color/white"
                android:textSize="16sp"
                android:text="around you"
                />

        </RelativeLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"

        android:padding="@dimen/medium"
        >

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            >

            <Button
                android:id="@+id/facebook_login_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"

                android:layout_marginBottom="@dimen/medium"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"

                android:background="@color/facebookBlue"
                android:textColor="@color/white"
                android:textAllCaps="false"
                android:text="@string/sign_in_facebook"
                />

            <Button
                android:id="@+id/google_login_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/facebook_login_button"

                android:layout_marginBottom="@dimen/small"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"

                android:background="@color/googleRed"
                android:textColor="@color/white"
                android:textAllCaps="false"
                android:text="@string/sign_in_google"
                />
        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"

            android:textColorLink="@color/colorhyperlink"
            android:textSize="12sp"
            android:text="@string/therms_of_service"/>

    </RelativeLayout>

</LinearLayout>
